Unit tests and UI fix

--- a/NewsSite.UI/Views/Articles/Index.cshtml
+++ b/NewsSite.UI/Views/Articles/Index.cshtml
@@ -34,7 +34,7 @@
         <div class="preview-article-box">
             <h2>@article.Title</h2>
             <p>@article.PreviewText</p>
-            <p>@article.Views</p>
+            <p>@article.Views views</p>
             <a asp-controller="Articles" asp-action="ArticleDetails" asp-route-id="@article.Id" class="button-link button-blue-back">Read more.</a>
         </div>
     }
